--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
     margin-left: auto;
     margin-right: auto;
     width: 1024px;
+    padding: 0;
 }
 .flexible-part{
     display: flex;
@@ -12,18 +13,23 @@ body{
     width: 50%;
     margin-left: 5%;
     margin-right: 5%;
-    margin-top: 150px;
-    padding: 2em;
+    margin-top: 120px;
 }
 .text-part h1{
-    font-size: 25px;
+    font-size: 39px;
     font-weight: 900;
+    line-height: 12px;
+}
+.text-part p{
+    text-align: justify;
+    padding-top: 15px;
 }
 .orange-color{
     color: orange;
 }
 .image-part img{
     width: 100%;
+    height: 90%;
 }
 .text-part a{
     background-image: linear-gradient(orangered,tomato);
@@ -31,6 +37,8 @@ body{
     text-decoration: none;
     padding: 15px 40px;
     border-radius: 50px;
+    line-height: 90px;
+    font-weight: 600;
 }
 
 
