--- a/style.css
+++ b/style.css
@@ -69,8 +69,25 @@ body{
     width: 100%;
 }
 .recipies-item h3{
-    font-size: 10px;
+    font-size: 15px;
+    
 }
+.recipies-item p{
+    font-size: 10px;
+    line-height: 20px;
+}
+.channel-develop{
+    margin-top: 100px;
+}
+.channel-item{
+    text-align: center;
+    margin-left: 18%;
+    margin-top: -50px;
+}
+.channel-item p{
+    padding-bottom: 20px;
+}
+
 .end-part{
     text-align: center;
     background-color: black;
