--- a/style.css
+++ b/style.css
@@ -85,6 +85,9 @@ body{
     margin-left: 18%;
     margin-top: -50px;
 }
+.channel-item h3{
+    font-weight: 900;
+}
 .channel-item p{
     padding-bottom: 20px;
 }
